[gd_scene load_steps=11 format=3 uid="uid://2sgw2kjm6pnr"]

[ext_resource type="PackedScene" uid="uid://cyrjqlsuuv5" path="res://scenes/map_editor/story/stories/types/base_edit_action.tscn" id="1_kammj"]
[ext_resource type="Script" path="res://scenes/map_editor/story/stories/types/ban_unit.gd" id="2_kwnnw"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_cw3rh"]
[ext_resource type="Texture2D" uid="uid://bkp8gbivdpjm" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown.png" id="4_su7sm"]
[ext_resource type="Texture2D" uid="uid://ceku0o1lajwmu" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_pressed.png" id="5_bn5re"]
[ext_resource type="Texture2D" uid="uid://bewr0f1ty1b3v" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_hover.png" id="6_wofcb"]
[ext_resource type="PackedScene" uid="uid://gxr1dxy4v75y" path="res://scenes/ui/icons/pen.tscn" id="7_6wv6o"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="8_w0rxi"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="9_t1yt8"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="10_e2hpq"]

[node name="BanUnit" instance=ExtResource("1_kammj")]
script = ExtResource("2_kwnnw")

[node name="where" type="Label" parent="." index="4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_right = -250.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_cw3rh")
text = "TR_BUILDING"
vertical_alignment = 1

[node name="x" type="LineEdit" parent="where" index="0"]
layout_mode = 0
offset_left = 395.0
offset_right = 465.0
offset_bottom = 40.0
placeholder_text = "X"
alignment = 1
max_length = 2

[node name="y" type="LineEdit" parent="where" index="1"]
layout_mode = 0
offset_left = 470.0
offset_right = 540.0
offset_bottom = 40.0
placeholder_text = "Y"
alignment = 1
max_length = 2

[node name="picker_button" type="TextureButton" parent="where" index="2"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_su7sm")
texture_pressed = ExtResource("5_bn5re")
texture_hover = ExtResource("6_wofcb")
texture_focused = ExtResource("6_wofcb")

[node name="anchor" type="Control" parent="where/picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="where/picker_button/anchor" index="0" instance=ExtResource("7_6wv6o")]

[node name="ability" type="Label" parent="." index="5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_right = -250.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_cw3rh")
text = "TR_UNIT_NO"
vertical_alignment = 1

[node name="id" type="LineEdit" parent="ability" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
text = "0"
alignment = 1

[node name="ban" type="Label" parent="." index="6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 250.0
offset_right = -250.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_cw3rh")
text = "TR_DISABLE"
vertical_alignment = 1

[node name="ban_button" type="TextureButton" parent="ban" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
texture_normal = ExtResource("8_w0rxi")
texture_pressed = ExtResource("9_t1yt8")
texture_hover = ExtResource("10_e2hpq")
texture_focused = ExtResource("10_e2hpq")

[node name="label" type="Label" parent="ban/ban_button" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_cw3rh")
text = "TR_ON"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="where/x" to="." method="_on_text_changed"]
[connection signal="text_changed" from="where/y" to="." method="_on_text_changed"]
[connection signal="pressed" from="where/picker_button" to="." method="_on_picker_button_pressed"]
[connection signal="text_changed" from="ability/id" to="." method="_on_text_changed"]
[connection signal="pressed" from="ban/ban_button" to="." method="_on_ban_button_pressed"]
